<resources>
    <string name="app_name">Utilities - v8.6</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_note__editor">Note Editor</string>


    <string name="author">dv.piedra</string>
    <string name="app_description">
        This is an app built with the intent of having all your necessities in one place.
          This includes the weather, Notes, News, and some games to pass time.
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">News</string>
    <string name="see_more"><![CDATA[See More >>]]></string>
    <string name="title_activity_amazon">Amazon</string>
    <string name="title_activity_algebraic_calculator">Algebraic Calculator</string>


    <string name="no_internet">No Internet!</string>
    <string name="back">Back</string>
    <string name="reload">Reload</string>
    <string name="effusion_title"><![CDATA[Effusion & Deffusion Calculator]]></string>
    <string name="element_b">Element B:</string>
    <string name="element_a">Element A:</string>
    <string name="rate_b">Rate B: (?)</string>
    <string name="rate_a">Rate A: (?)</string>
    <string name="effusion_deffusion_ncalculator">Effusion/Deffusion Calculator</string>
</resources>
