<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EffusionDeffusionSolver">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="25sp"
        android:text="@string/effusion_title"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:id="@+id/effusion_title"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/effusion_title"
        android:layout_marginTop="5dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:id="@+id/elemA_LL"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/element_a"
            android:textColor="@android:color/black"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:id="@+id/ElementA"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/elemA_LL"
        android:layout_marginTop="5dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:id="@+id/elemB_LL"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/element_b"
            android:textColor="@android:color/black"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:id="@+id/ElementB"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/elemB_LL"
        android:layout_marginTop="5dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:id="@+id/rateA_LL"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/rate_a"
            android:textColor="@android:color/black"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:id="@+id/RateA"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rateA_LL"
        android:layout_marginTop="5dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:id="@+id/rateB_LL"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/rate_b"
            android:textColor="@android:color/black"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:id="@+id/RateB"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/rateB_LL"
        android:background="@drawable/dark_cyan_background"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="Solve"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="10dp"
        android:id="@+id/solve_effdeff"
        android:onClick="solveEffusionDeffusion"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/solve_effdeff"
        android:id="@+id/effdeffsolution"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        />

</android.support.constraint.ConstraintLayout>